# wallace_rs

./: .gitignore  Cargo.toml  messages.json
src/: errors.rs  lib.rs  main.rs
src/file_io/: mod.rs
src/handler/: mod.rs
src/messages/: mod.rs  registry.rs
src/parser/: mod.rs
src/utils/: group.rs  mod.rs
